# universal-email-client

./: .gitignore  CLAUDE.md  README.md
.agent-os/instructions/: execute-spec.md  plan-feature.md
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/: 001-gmail-oauth-and-inbox.md  _template.md
.agent-os/standards/: code-style.md  security.md  testing.md
.claude/: settings.json
.claude/agents/: ai-engineer.md  provider-engineer.md  pwa-engineer.md
.claude/hooks/: post-edit-format.js  secret-scan.js
.claude/plugins/: plugin.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: main.py
backend/app/ai/: agents.py  prompts.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: __init__.py  unified.py
backend/app/oauth/: gmail.py  microsoft.py
backend/app/providers/: __init__.py  base.py  gmail.py  imap.py  microsoft.py
backend/app/routes/: __init__.py  ai.py  auth.py  mail.py
backend/tests/: conftest.py  test_security.py
backend/tests/ai/: test_agents.py  test_prompts.py
backend/tests/fixtures/: gmail_thread_full.json
backend/tests/providers/: test_gmail_mapper.py
backend/tests/routes/: test_auth.py
docs/: AGENTS_SKILLS_HOOKS.md  ARCHITECTURE.md  SETUP_GMAIL_OAUTH.md  WORKFLOW.md
frontend/: next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  sw.ts
frontend/components/: Icons.tsx  (+1 more)
(+31 files in other folders)
